--- a/index.html
+++ b/index.html
@@ -5,26 +5,29 @@
         <title>Giphy Party!</title>
     </head>
     <body>
-        <center>
-            <h1>
+        <h1>
+            <center>
                 GIPHY PARTY
-                <h1>
-                    <p>
-                        <form>
-                            <input
-                                type="text"
-                                id="search"
-                                name="search"
-                                placeholder="What are you looking for?"
-                            >
-                            <input type="submit" name="search" id="submit_search">
-                            <button id="remove" class="remove_btn">Remove Giphy</button>
-                        </form>
-                        <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-                        <!--<script src="https://code.jquery.com/jquery-3.2.1.js"></script> -->
-                        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-                        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-                        <script src="https://unpkg.com/axios/dist/axios.js"></script>
-                        <script src="app.js"></script>
-                    </body>
-                </html>
+            </center>
+        </h1>
+        <form>
+            <center>
+                <input
+                    type="text"
+                    id="-submit_search"
+                    name="submit_search"
+                    placeholder="What are you looking for?"
+                >
+                <button id="add-btn" class="add_btn" value="seach giphy">Add Giphy</button>
+                <button id="remove-btn" class="remove_btn">Remove Giphy</button>
+            </center>
+        </form>
+        <div id="gif_area"></div>
+        <!-- <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script> -->
+        <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
+        <script src="https://unpkg.com/axios/dist/axios.js"></script>
+        <script src="app.js"></script>
+    </body>
+</html>
